# security-testing-framework

./: .gitignore  CHANGELOG.md  HOT_DEPLOY.ps1  POWERSHELL_DEPLOYMENT_GUIDE.md  QUICK_COMMANDS.md  README.md  SecurityTestingFramework_Fixed.spec  build_installer.bat  build_single_file.py  config.json  deploy_test_environment.bat  deploy_test_environment.ps1  install.bat  install.ps1  launcher.py  quick-install.cmd  quick_deploy.ps1  requirements.txt  temp_patch.txt  temp_patch2.txt  temp_patch3.txt  version_info.py
.github/workflows/: build.yml
docs/: CLI_Roadmap.md  InjectReport_Workflow.md  bypass_methods_integration.md
native/: CMakeLists.txt
native/bypass_methods/: CMakeLists.txt  README.md
native/bypass_methods/.github/workflows/: build.yml
native/bypass_methods/cmake/: dependencies.cmake
native/bypass_methods/include/: dx_hook_core.h  error_handler.h  frame_extractor.h  memory_tracker.h  performance_monitor.h  raii_wrappers.h
native/bypass_methods/include/com_hooks/: factory_hooks.h
native/bypass_methods/include/hooks/: com_interface_wrapper.h
native/bypass_methods/include/optimization/: memory_pool.h  performance_optimizer.h  thread_pool.h
native/bypass_methods/include/signatures/: dx_signatures.h
native/bypass_methods/include/utils/: crash_reporter.h  error_handler.h  memory_tracker.h  performance_monitor.h
native/bypass_methods/python/requirements/: requirements.txt  requirements_accessibility.txt
native/bypass_methods/scripts/: build_windows.ps1
native/bypass_methods/src/: dllmain.cpp  error_handler.cpp  memory_tracker.cpp  performance_monitor.cpp
native/bypass_methods/src/com_hooks/: factory_hooks.cpp
native/bypass_methods/src/frame/: frame_extractor.cpp
native/bypass_methods/src/hooks/: dx_hook_core.cpp  swap_chain_hook.cpp
native/bypass_methods/src/hooks/windows_api/: hooked_functions.cpp  keyboard_hook.cpp  windows_api_hooks.cpp
native/bypass_methods/src/memory/: pattern_scanner.cpp
native/bypass_methods/src/optimization/: memory_pool.cpp  performance_optimizer.cpp  thread_pool.cpp
native/bypass_methods/src/shared/: shared_memory_transport.cpp
native/bypass_methods/src/signatures/: dx_signatures.cpp
native/bypass_methods/src/utils/: crash_reporter.cpp  error_handler.cpp  memory_tracker.cpp  performance_monitor.cpp  raii_wrappers.cpp
native/bypass_methods/tests/: CMakeLists.txt
resources/templates/: default_report.md
src/cli/: cli_handler.py  constants.py  default_profiles.py  profile_store.py  shell.py
src/cli/services/: __init__.py  capture_service.py  hooks_service.py  inject_service.py  inventory_service.py  monitor_service.py  profiles_service.py  report_service.py
src/core/: advanced_config.py  stealth_engine.py
src/gui/: main_window.py
src/modules/: api_hooks.py  comprehensive_test_runner.py  directx_hook.py  injection_pipeline.py  input_monitor.py  memory_scanner.py  process_inventory.py  screen_capture_bypass.py  system_monitor.py  test_runner.py
src/utils/: __init__.py  native_paths.py  report_generator.py  updater.py
tests/: test_process_inventory.py
